# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.8

Version 8.0.7

  - Fix for Bug#26227653, WL#10528 DIFF BEHAVIOUR WHEN SYSTEM PROP JAVAX.NET.SSL.TRUSTSTORETYPE IS SET.

  - WL#10528, DevAPI: Ensure all connectors are secure by default.

  - WL#8305, Remove internal dependency on connection objects.

  - Fix for Bug#22972057, X DEVAPI: CLIENT HANGS AFTER CONNECTION FAILURE.

  - Fix for Bug#26140577, GIS TESTS ARE FAILING WITH MYSQL 8.0.1.

  - WL#10765, DevAPI: Forbid modify() and remove() with no condition.

  - Fix for Bug#26090721, CONNECTION FAILING WHEN SERVER STARTED WITH COLLATION UTF8MB4_DE_PB_0900_AI_CI.

  - WL#10781, enum-based connection properties.

  - Fix for Bug#73775 (19531384), DBMD.getProcedureColumns()/.getFunctionColumns() fail to filter by columnPattern.

  - Fix for Bug#84324 (25321524), CallableStatement.extractProcedureName() not work when catalog name with dash.

  - Fix for Bug#79561 (22333996), NullPointerException when calling a fully qualified stored procedure.

  - Fix for Bug#84783 (25490163), query timeout is not working(thread hang).

  - Fix for Bug#70704 (17653733), Deadlock using UpdatableResultSet.

  - Fix for Bug#66430 (16714868), setCatalog on connection leaves ServerPreparedStatement cache for old catalog.

  - Fix for Bug#70808 (17757070), Set sessionVariables in a single query.

  - Fix for Bug#77192 (21170603), Description for the Property replicationConnetionGroup Missing from the Manual.

  - Fix for Bug#83834 (25101890), Typo in Connector/J error message.

  - WL#10531, Support utf8mb4 as default charset.

  - Fix for Bug#85555 (25757019), useConfigs Can't find configuration template named, in mysql-connector-java 6.x

  - WL#10529, Move version number to 8.0.

  - WL#10530, DevAPI: Remove XSession, rename NodeSession to Session.

  - Fix for Bug#23510958, CONCURRENT ASYNC OPERATIONS RESULT IN HANG.
